--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ add_subdirectory(externals/tinyxml EXCLUDE_FROM_ALL)
 
 # Use our own to ensure compatibility
 add_subdirectory(externals/fmt EXCLUDE_FROM_ALL)
+add_subdirectory(externals/mio EXCLUDE_FROM_ALL)
 
 #
 # Targets
