[core] refactor rawfile by separating memory and disk files. for now, keeping the same behaviour

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -12,5 +12,6 @@ target_link_libraries(vgmcore
                              ZLIB::ZLIB
                              minizip
                              tinyxml
+														 mio
                       PRIVATE g_options
                               g_warnings)
