[core] add tests for basic file structures

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_executable(vgmtrans_test
-    file_io.cpp)
+	main.cpp
+	file_io.cpp)
 
-target_link_libraries(vgmtrans_test PRIVATE vgmcore catch)
+target_link_libraries(vgmtrans_test PRIVATE vgmcore catch g_options g_warnings)
 target_include_directories(vgmtrans_test PRIVATE . ../src/main)
 
 add_test(vgmtrans_test vgmtrans_test)
