[core] add preliminary loader testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(vgmtrans_test
 	main.cpp
-	file_io.cpp)
+	file_io.cpp
+	loader.cpp)
 
 target_link_libraries(vgmtrans_test PRIVATE vgmcore catch g_options g_warnings)
 target_include_directories(vgmtrans_test PRIVATE . ../src/main)
