[core] initial psf testing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_executable(vgmtrans_test
 	main.cpp
 	file_io.cpp
-	loader.cpp)
+	loader.cpp
+	psf.cpp)
 
 target_link_libraries(vgmtrans_test PRIVATE vgmcore catch g_options g_warnings)
 target_include_directories(vgmtrans_test PRIVATE . ../src/main)
