[core] general ndsscanner cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,9 @@ if(MSVC)
                                    -DNOMINMAX
                                    -D_CRT_SECURE_NO_DEPRECATE
                                    -D_CRT_NONSTDC_NO_DEPRECATE
-                                   -D_CRT_SECURE_NO_WARNINGS)
+                                   -D_CRT_SECURE_NO_WARNINGS
+																	 /permissive-
+												)
 
   target_compile_options(g_warnings
                          INTERFACE /W3)
