--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           sudo add-apt-repository ppa:beineri/opt-qt-5.14.1-xenial -y
           sudo apt-get update -qq
-          sudo apt-get -y install qt514base libfluidsynth-dev ninja-build libgl1-mesa-dev
+          sudo apt-get -y install qt514base qt514wayland libjack0 libfluidsynth-dev ninja-build libgl1-mesa-dev
           echo ::set-env name=CXX::g++-9
           echo ::set-env name=CC::gcc-9
           echo "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
@@ -71,7 +71,7 @@ jobs:
           cp ../data/vgmtrans.desktop appdir/usr/share
           cp ../data/mame_roms.xml appdir/usr/bin
           cp ../src/vgmtrans-qt/resources/images/logo.png appdir/usr/share/default.png
-          ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/vgmtrans.desktop -appimage -qmake=/opt/qt514/bin/qmake
+          ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/vgmtrans.desktop -appimage -qmake=/opt/qt514/bin/qmake -extra-plugins=platforms/ -verbose=2
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - if: matrix.os == 'ubuntu-16.04'
         name: "Upload Linux artifact"
