[ci] drop container because of fuse permissions
deps will need to be cached someday

--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -43,12 +43,24 @@ jobs:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}.dmg
           path: "build/VGMTrans.dmg"
   ubuntu:
-    runs-on: ubuntu-latest
-    container: vgmtrans/vgmtrans-deps:xenial
+    runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
         with:
           ref: 'refactor'
+      - name: "Install dependencies"
+        run: |
+          sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-xenial -y
+          sudo apt-get update -qq
+          sudo apt-get -y install qt514base qt514wayland libjack-dev libsndfile1 libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
+          wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.2.zip
+          unzip v2.1.2.zip
+          cd fluidsynth-2.1.2
+          mkdir build && cd build
+          cmake -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
+          ninja make
+          ninja install
+          cd ../..
       - name: "Set environment variables"
         run: |
           echo ::set-env name=CXX::g++-9
