--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}.dmg
           path: "build/VGMTrans.dmg"
-  ubuntu:
+  Ubuntu:
     runs-on: ubuntu-16.04
     steps:
       - uses: actions/checkout@v2
@@ -57,7 +57,7 @@ jobs:
         run: |
           sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-xenial -y
           sudo apt-get update -qq
-          sudo apt-get -y install pkg-config qt514base qt514wayland libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
+          sudo apt-get -y install pkg-config qt514base qt514wayland qt514svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
           wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.2.zip
           unzip v2.1.2.zip
           cd fluidsynth-2.1.2
