--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -10,13 +10,11 @@ jobs:
           ref: 'refactor'
       - name: "Install dependencies"
         run: |
-          brew upgrade gcc@9 || brew install gcc@9
+          brew upgrade gcc@10 || brew install gcc@10
           brew upgrade ninja || brew install ninja
           brew upgrade cmake || brew install cmake
           brew upgrade qt || brew install qt
           brew upgrade fluid-synth || brew install fluid-synth
-          echo ::set-env name=CXX::g++-9
-          echo ::set-env name=CC::gcc-9
           echo "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
           echo ::add-path::/usr/local/bin
       - name: "Prepare build"
@@ -24,8 +22,7 @@ jobs:
           mkdir build
           cd build
           cmake --version
-          # Silly hack: by purging these variable we force cmake to use the CXX/CC variables
-          cmake -DCMAKE_C_COMPILER="" -DCMAKE_CXX_COMPILER="" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -G Ninja ..
+          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -G Ninja ..
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - name: "Run tests"
@@ -50,20 +47,19 @@ jobs:
           ref: 'refactor'
       - name: "Set environment variables"
         run: |
-          echo ::set-env name=CXX::g++-9
-          echo ::set-env name=CC::gcc-9
           echo "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
       - name: "Install dependencies"
         run: |
-          sudo add-apt-repository ppa:beineri/opt-qt-5.14.2-xenial -y
+          sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-xenial -y
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt-get update -qq
-          sudo apt-get -y install pkg-config qt514base qt514wayland qt514svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
-          wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.2.zip
-          unzip v2.1.2.zip
-          cd fluidsynth-2.1.2
+          sudo apt-get -y install pkg-config gcc-10 qt515base qt515wayland qt515svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
+          wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.5.zip
+          unzip v2.1.5.zip
+          cd fluidsynth-2.1.5
           mkdir build && cd build
-          cmake -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
-          ninja -j$(nproc)
+          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
+          cmake --build build --config "Release" --parallel
           sudo ninja install
           cd ../..
       - name: "Prepare build"
@@ -71,8 +67,7 @@ jobs:
           mkdir build
           cd build
           cmake --version
-          # Silly hack: by purging these variable we force cmake to use the CXX/CC variables
-          cmake -DCMAKE_C_COMPILER="" -DCMAKE_CXX_COMPILER="" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - name: "Run tests"
