--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -51,15 +51,14 @@ jobs:
       - name: "Install dependencies"
         run: |
           sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-xenial -y
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt clean
           sudo apt update
-          sudo apt install -y pkg-config gcc-10 qt515base qt515wayland qt515svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
+          sudo apt install -y pkg-config qt515base qt515svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
           wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.5.zip
           unzip v2.1.5.zip
           cd fluidsynth-2.1.5
           mkdir build && cd build
-          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
+          cmake -DCMAKE_C_COMPILER="gcc-9" -DCMAKE_CXX_COMPILER="g++-9" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
           cmake --build build --config "Release" --parallel
           sudo ninja install
           cd ../..
@@ -68,7 +67,7 @@ jobs:
           mkdir build
           cd build
           cmake --version
-          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_C_COMPILER="gcc-9" -DCMAKE_CXX_COMPILER="g++-9" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - name: "Run tests"
@@ -84,7 +83,7 @@ jobs:
           cp ../data/vgmtrans.desktop appdir/usr/share
           cp ../data/mame_roms.xml appdir/usr/bin
           cp ../src/vgmtrans-qt/resources/images/logo.png appdir/usr/share/default.png
-          ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/vgmtrans.desktop -appimage -qmake=/opt/qt514/bin/qmake -extra-plugins=platforms/ -verbose=2
+          ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/vgmtrans.desktop -appimage -qmake=/opt/qt515/bin/qmake -extra-plugins=platforms/ -verbose=2
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - name: "Upload artifact"
         uses: actions/upload-artifact@v1
