--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -59,7 +59,7 @@ jobs:
           cd fluidsynth-2.1.5
           mkdir build && cd build
           cmake -DCMAKE_C_COMPILER="gcc-9" -DCMAKE_CXX_COMPILER="g++-9" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
-          cmake --build build --config "Release" --parallel
+          cmake --build . --config "Release" --parallel
           sudo ninja install
           cd ../..
       - name: "Prepare build"
