--- a/.github/workflows/buildtest.yml
+++ b/.github/workflows/buildtest.yml
@@ -15,8 +15,8 @@ jobs:
           brew upgrade cmake || brew install cmake
           brew upgrade qt || brew install qt
           brew upgrade fluid-synth || brew install fluid-synth
-          echo "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
-          echo ::add-path::/usr/local/bin
+          echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+          echo "/usr/local/bin" >> $GITHUB_PATH
       - name: "Prepare build"
         run: |
           mkdir build
@@ -47,7 +47,7 @@ jobs:
           ref: 'refactor'
       - name: "Set environment variables"
         run: |
-          echo "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
+          echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: "Install dependencies"
         run: |
           sudo add-apt-repository ppa:beineri/opt-qt-5.15.0-xenial -y
@@ -100,15 +100,13 @@ jobs:
       - name: "Install dependencies"
         run: |
           git submodule update --init --recursive
-          Write-Output "::set-env name=CXX::cl"
-          Write-Output "::set-env name=CC::cl"
-          Write-Output "::set-env name=BRANCH::$(git rev-parse --abbrev-ref HEAD)"
+          echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
       - name: "Prepare build"
         run: |
           mkdir build
           cd build
           cmake --version
-          cmake -DCMAKE_BUILD_TYPE=Release ..
+          cmake -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -DCMAKE_BUILD_TYPE=Release ..
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - name: "Run tests"
